--- a/content/publication/Bioinformatics_2012_KGBassembler/cite.bib
+++ b/content/publication/Bioinformatics_2012_KGBassembler/cite.bib
@@ -1,12 +1,21 @@
 @article{undefined, 
-  author = {Chuang Ma,Hao Chen,Mingming Xin,Ruolin Yang,Xiangfeng Wang}, 
-  title = {{KGBassembler: a karyotype-based genome assembler for Brassicaceae species}}, 
-  issn = {1367-4803}, 
-  doi = {10.1093/bioinformatics/bts586}, 
+  author = {Yuwen Liu, Jie Zhou,Kevin P. White}, 
+  title = {{RNA-seq differential expression studies: more sequence or more replication?}}, 
+  issn = {1367-4811 }, 
+  doi = {10.1093/bioinformatics/btt688}, 
   pmid = {23044544}, 
-  abstract = {Motivation: The Brassicaceae family includes the most important plant model Arabidopsis thaliana and many cruciferous vegetable crops. A number of close relatives of Arabidopsis and economically important Brassica species are being sequenced with whole-genome shotgun sequencing technologies. However, de novo assembly of full chromosomes is difficult, since many non-model Brassicaceae species are lacking genetic and/or physical maps. As a unique feature for Brassicaceae, the genome of each member is composed of 24 conserved chromosomal blocks, and the arrangement of the 24 blocks can be obtained from karyotype analysis via comparative chromosome painting experiments. Taking this advantage, we developed a bioinformatic tool named KGBassembler to automatically finalize assembly of full chromosomes from contigs and/or scaffolds based on available karyotypes of Brassicaceae species. Availability: KGBassembler was implemented in C++ with a graphical user interface. It is freely available to academic users at http://www.cmbb.arizona.edu/KGBassembler/. Contact:xwang1@cals.arizona.edu}, 
-  pages = {3141-3143}, 
-  volume = {28}, 
+  abstract = {Motivation: RNA-seq is replacing microarrays as the primary tool
+for gene expression studies. Many RNA-seq studies have used insufficient biological replicates, resulting in low statistical power and
+inefficient use of sequencing resources.
+Results: We show the explicit trade-off between more biological replicates and deeper sequencing in increasing power to detect differentially expressed (DE) genes. In the human cell line MCF7, adding more
+sequencing depth after 10 M reads gives diminishing returns on power
+to detect DE genes, whereas adding biological replicates improves
+power significantly regardless of sequencing depth. We also propose
+a cost-effectiveness metric for guiding the design of large-scale RNA-seq DE studies. Our analysis showed that sequencing less reads and
+performing more biological replication is an effective strategy to increase power and accuracy in large-scale differential expression RNAseq studies, and provided new insights into efficient experiment
+design of RNA-seq studies.}, 
+  pages = {301-4}, 
+  volume = {30}, 
   journal = {Bioinformatics}, 
-  year = {2012}
+  year = {2014}
 }
